--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <HTML>
 <HEAD>
     <TITLE>
@@ -10,7 +11,6 @@
 <div class="container">
     <div class="col-md-12">
         {% block body %}
-
         {% endblock %}
     </div>
 </div>
