Comments, cleanup.  Move to local bootstrap as opposed to CDN.

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,5 +1,9 @@
 {% extends "base.html.twig" %}
 
+{% block title %}
+    Category Tool by Matthewrbowker
+{% endblock %}
+
 {% block body %}
     <H1>Category Tool by Matthewrbowker</H1>
     <form action="" method="get">
