--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,9 +2,10 @@
 <HTML>
 <HEAD>
     <TITLE>
-
+        {% block title %}
+        {% endblock %}
     </TITLE>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 
 </HEAD>
 <BODY>
@@ -14,7 +15,7 @@
         {% endblock %}
     </div>
 </div>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+<script src="bootstrap/js/bootstrap.js"></script>
 </BODY>
 </HTML>
 
