Credit where it's due, fix links

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -11,8 +11,16 @@
             <label for="category">Category</label>
             <input type="text" class="form-control" id="category" name="category" placeholder="Category">
         </div>
-        <input type="submit" class="btn btn-btn-success" value="Submit" />
-        <input type="reset" class="btn btn-btn-error" value="Reset" />
+        <input type="submit" class="btn btn-success" value="Submit" />
+        <input type="reset" class="btn btn-danger" value="Reset" />
 
     </form>
+<hr />
+    Thanks to the following libraries:
+    <ul>
+        <li><a href="http://getbootstrap.com" target="_blank">Twitter Bootstrap</a> - MIT</li>
+        <li><a href="https://twig.symfony.com/" target="_blank">Twg</a> - New BSD</li>
+        <li><a href="https://github.com/DaveChild/Text-Statistics/" target="_blank">PHP Text Statistics</a> - BSD-2-Clause</li>
+        <li><a href="https://github.com/addwiki/mediawiki-api-base" target="_blank">mediawiki-api-base</a> - GPL-2</li>
+    </ul>
 {% endblock %}
